--- a/CSS/macska/macska.html
+++ b/CSS/macska/macska.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Macska</title>
-    <link rel="stylesheet" href="/CSS/macska.css">
+    <link rel="stylesheet" href="macska.css">
 </head>
 <body>
     <header>
