--- a/CSS/szelektorok/index.html
+++ b/CSS/szelektorok/index.html
@@ -46,5 +46,11 @@
             <td>Eum.</td>
         </tr>
     </table>
+    <div>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Eum, dolorum? Cumque, nisi exercitationem?</p>
+        <p>Voluptas, officiis? Sed, accusantium cupiditate.</p>
+        <p>Eum obcaecati ullam sapiente tempore.</p>
+    </div>
 </body>
 </html>
