--- a/CSS/szelektorok/index.html
+++ b/CSS/szelektorok/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet.</p>
-    <p id="p2" >Omnis quasi numquam repudiandae ipsum!</p>
+    <p id="p2" class="vorosek">Omnis quasi numquam repudiandae ipsum!</p>
     <p>Ipsa porro natus perspiciatis corporis!</p>
     <p class="vorosek">Aliquam aut sint tempore. Amet!</p>
     <h1>Felsorolás</h1>
@@ -48,9 +48,9 @@
     </table>
     <div>
         <p>Lorem ipsum dolor sit amet.</p>
-        <p>Eum, dolorum? Cumque, nisi exercitationem?</p>
+        <p title="masodik">Eum, dolorum? Cumque, nisi exercitationem?</p>
         <p>Voluptas, officiis? Sed, accusantium cupiditate.</p>
-        <p>Eum obcaecati ullam sapiente tempore.</p>
+        <p title="negyedik">Eum obcaecati ullam sapiente tempore.</p>
     </div>
 </body>
 </html>
